--- a/src/Config.json
+++ b/src/Config.json
@@ -14,7 +14,7 @@
         "magicEden": {
             "sac": "https://qi8ok3f41j.execute-api.ca-central-1.amazonaws.com/prod/getsacfloorprice",
             "nac": "https://qi8ok3f41j.execute-api.ca-central-1.amazonaws.com/prod/getnacfloorprice",
-            "collectionStats": "https://qi8ok3f41j.execute-api.ca-central-1.amazonaws.com/prod/getcollectionslist/"
+            "collectionStats": "http://api-mainnet.magiceden.dev/v2/collections"
         },
         "sac": {
             "marketcap": "https://qi8ok3f41j.execute-api.ca-central-1.amazonaws.com/prod/getpuffmarketcap"
